--- a/certifications.html
+++ b/certifications.html
@@ -4,111 +4,102 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Certifications | Niknaz Sadehvandi</title>
-
-  <meta name="description" content="Cybersecurity certifications earned by Niknaz Sadehvandi." />
-  <meta property="og:title" content="Certifications | Niknaz Sadehvandi" />
-  <meta property="og:description" content="Completed cybersecurity certifications by Niknaz Sadehvandi." />
-  <meta property="og:image" content="assets/site-banner.png" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://niknaz-65.github.io/certifications.html" />
-
+  <meta name="description" content="Verified certifications and credentials for Niknaz Sadehvandi — cybersecurity, scripting, and cloud fundamentals." />
+  <link rel="icon" href="assets/favicon.png" />
   <style>
-    :root{
-      --navy:#0a1f44; --navy2:#13294b; --ink:#222;
-      --muted:#5b6474; --card:#fff; --bg:#f7f9fc;
-      --shadow:0 2px 6px rgba(0,0,0,.08);
-      --shadowHover:0 10px 24px rgba(0,0,0,.14);
-      --radius:14px;
-    }
-    *{box-sizing:border-box}
-    body{margin:0;font-family:Arial,Helvetica,sans-serif;background:var(--bg);color:var(--ink)}
-    header{background:var(--navy);color:#fff;text-align:center;padding:40px 16px}
-    header h1{margin:0 0 6px;font-size:2.2rem}
-    header p{margin:0;opacity:.9}
-    nav{background:var(--navy2);padding:12px;text-align:center}
-    nav a{color:#fff;margin:0 16px;text-decoration:none;font-weight:700}
-    nav a.active,nav a:hover{text-decoration:underline;text-underline-offset:4px}
+    :root{--navy:#0a1f44;--navy2:#13294b;--bg:#f7f9fc;--card:#fff;--muted:#5b6876;--radius:16px;--shadow:0 10px 30px rgba(0,0,0,.08)}
+    *{box-sizing:border-box}body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:#222}
+    header{background:var(--navy);color:#fff}.nav{max-width:1100px;margin:0 auto;display:flex;align-items:center;justify-content:space-between;padding:16px 20px}
+    .brand{display:flex;align-items:center;gap:12px;font-weight:700}.brand .lock{width:26px;height:26px;border:2px solid #fff;border-radius:6px;position:relative}
+    .brand .lock:before{content:"";position:absolute;top:-12px;left:6px;right:6px;height:12px;border:2px solid #fff;border-bottom:none;border-radius:10px 10px 0 0}
+    nav ul{list-style:none;display:flex;gap:22px;margin:0;padding:0}nav a{color:#e8eef8;text-decoration:none;font-weight:600}nav a.active{color:#fff;border-bottom:2px solid #fff;padding-bottom:2px}
 
-    main{max-width:980px;margin:0 auto;padding:42px 16px}
-    h2{color:var(--navy2);margin:0 0 10px;font-size:1.9rem}
-    .lead{margin:0 0 22px;color:var(--muted);line-height:1.6}
+    .wrap{max-width:1100px;margin:24px auto;padding:0 20px}
+    h1{color:var(--navy2);margin:6px 0 4px} .lead{color:var(--muted);margin:0 0 14px}
 
-    /* Certification list */
-    .cert-list{display:flex;flex-direction:column;gap:16px;margin:0;padding:0;list-style:none}
-    .cert-item{
-      background:var(--card); border-radius:var(--radius);
-      box-shadow:var(--shadow); overflow:hidden;
-      transition:transform .18s ease, box-shadow .18s ease, border-color .18s ease;
-    }
-    .cert-item:hover{transform:translateY(-3px); box-shadow:var(--shadowHover)}
-    .cert-link{
-      display:flex; align-items:center; gap:18px; padding:18px 20px;
-      color:inherit; text-decoration:none;
-    }
-    .cert-logo{
-      height:32px; width:auto; display:block; flex:0 0 auto;
-      filter: contrast(1.05) saturate(1.05);
-    }
-    .cert-content{display:flex; flex-direction:column; gap:4px}
-    .cert-title{font-weight:800; font-size:1.05rem; color:var(--navy2); margin:0}
-    .cert-meta{margin:0; color:var(--muted)}
-    /* Small screens: keep things tight */
-    @media (max-width:520px){
-      .cert-link{gap:14px; padding:16px}
-      .cert-logo{height:28px}
-      .cert-title{font-size:1rem}
-    }
+    .list{display:grid;gap:14px}
+    .cert{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);display:grid;grid-template-columns:80px 1fr auto;gap:16px;align-items:center;padding:16px}
+    .logo{width:64px;height:64px;object-fit:contain;filter: saturate(0.9)}
+    .cert h3{margin:0 0 4px;color:var(--navy2)}
+    .meta{margin:0;color:#2d3e56;font-size:14px}
+    .desc{margin:6px 0 0;color:var(--muted)}
+    .btn{display:inline-flex;align-items:center;gap:8px;background:var(--navy2);color:#fff;padding:10px 14px;border-radius:10px;text-decoration:none;font-weight:600}
+    .btn.alt{background:#fff;color:var(--navy2);border:2px solid var(--navy2)}
 
-    footer{background:var(--navy);color:#fff;text-align:center;padding:22px;margin-top:44px}
+    h2{color:var(--navy2);margin:22px 0 10px}
+    footer{margin-top:28px;background:var(--navy);color:#cfd9ea}
+    .foot{max-width:1100px;margin:0 auto;padding:16px 20px;display:flex;align-items:center;justify-content:space-between}
   </style>
 </head>
 <body>
   <header>
-    <h1>Certifications</h1>
-    <p>My Achievements & Credentials</p>
+    <div class="nav">
+      <div class="brand"><div class="lock"></div><div>Niknaz Sadehvandi</div></div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a class="active" href="certifications.html">Certifications</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
-    <a href="certifications.html" class="active">Certifications</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+  <main class="wrap">
+    <h1>Certifications</h1>
+    <p class="lead">Verified credentials highlighting scripting, analytics, and foundational cloud knowledge for security work.</p>
 
-  <main>
-    <h2>Completed Certifications</h2>
-    <p class="lead">
-      Here are my verified certifications that highlight my technical knowledge and professional development
-      in cybersecurity and data science.
-    </p>
+    <section class="list" aria-label="Completed certifications">
+      <!-- IBM Python Basics -->
+      <article class="cert">
+        <img class="logo" src="assets/logos/ibm.png" alt="IBM logo" />
+        <div>
+          <h3>Python Basics for Data Science</h3>
+          <p class="meta">IBM • 2024</p>
+          <p class="desc">Data handling, automation, and scripting to support log parsing, enrichment, and analysis in security workflows.</p>
+        </div>
+        <div>
+          <a class="btn" href="#" target="_blank" rel="noopener">🔗 Verify</a>
+        </div>
+      </article>
 
-    <ul class="cert-list">
-      <!-- IBM -->
-      <li class="cert-item">
-        <a class="cert-link" href="assets/Niknaz_IBM_Python_DataScience.pdf" target="_blank" rel="noopener noreferrer" aria-label="Open IBM Python Basics for Data Science certificate">
-          <img class="cert-logo" src="assets/ibm-logo.png" alt="IBM logo">
-          <div class="cert-content">
-            <p class="cert-title">Python Basics for Data Science</p>
-            <p class="cert-meta">IBM, 2024</p>
-          </div>
-        </a>
-      </li>
+      <!-- Stanford R Fundamentals -->
+      <article class="cert">
+        <img class="logo" src="assets/logos/stanford.png" alt="Stanford Online logo" />
+        <div>
+          <h3>R Programming Fundamentals</h3>
+          <p class="meta">Stanford Online • 2024</p>
+          <p class="desc">Statistical thinking and data wrangling useful for threat trend analysis and KPI reporting.</p>
+        </div>
+        <div>
+          <a class="btn" href="#" target="_blank" rel="noopener">🔗 Verify</a>
+        </div>
+      </article>
+    </section>
 
-      <!-- Stanford Online -->
-      <li class="cert-item">
-        <a class="cert-link" href="assets/Niknaz_Stanford_R_Fundamentals.pdf" target="_blank" rel="noopener noreferrer" aria-label="Open Stanford Online R Programming Fundamentals certificate">
-          <img class="cert-logo" src="assets/stanford-logo.png" alt="Stanford Online logo">
-          <div class="cert-content">
-            <p class="cert-title">R Programming Fundamentals</p>
-            <p class="cert-meta">Stanford Online, 2024</p>
-          </div>
-        </a>
-      </li>
-    </ul>
+    <h2>In Progress</h2>
+    <section class="list" aria-label="In-progress certifications">
+      <!-- Azure Fundamentals -->
+      <article class="cert">
+        <img class="logo" src="assets/logos/azure.png" alt="Microsoft Azure logo" />
+        <div>
+          <h3>Microsoft Azure Fundamentals (AZ-900)</h3>
+          <p class="meta">Microsoft • In progress</p>
+          <p class="desc">Cloud concepts, identity, governance, and cost management — foundation for cloud security and compliance.</p>
+        </div>
+        <div>
+          <a class="btn alt" href="https://learn.microsoft.com/en-us/certifications/exams/az-900/" target="_blank" rel="noopener">📘 Exam Guide</a>
+        </div>
+      </article>
+    </section>
   </main>
 
   <footer>
-    © 2025 Niknaz Sadehvandi · Cybersecurity Portfolio
+    <div class="foot">
+      <small>© 2025 Niknaz Sadehvandi • Cybersecurity Portfolio</small>
+      <a href="Niknaz_Sadehvandi_Resume.pdf" download style="color:#cfd9ea">Download Resume</a>
+    </div>
   </footer>
 </body>
 </html>
