--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
   <!-- Hero -->
   <section class="hero">
-    <img class="headshot" src="assets/headshot.jpg" alt="Portrait of Niknaz Sadehvandi" />
+   <img class="headshot" src="profile.jpg" alt="Niknaz Sadehvandi" />
     <div>
       <h1>Cybersecurity Analyst</h1>
       <p class="tagline">DFIR • SOC Monitoring • Vulnerability Management • Compliance (NIST, SOX ITGC)</p>
