--- a/index.html
+++ b/index.html
@@ -149,6 +149,75 @@
     </div>
   </section>
 
+  <!-- Experience -->
+<section class="section" id="experience">
+  <div class="card">
+    <h2>Experience</h2>
+
+    <h3 style="margin:8px 0 6px;">Junior Cybersecurity Analyst — Sunset Auto Sales, Charlotte, NC</h3>
+    <p style="margin:0 0 12px; color:#5b6876;"><em>Mar 2020 – Present</em></p>
+    <ul style="margin:0; padding-left:18px; color:#5b6876; line-height:1.6;">
+      <li>Executed IT General Controls testing with strong SOX alignment and audit readiness.</li>
+      <li>Drove process improvements and corrective actions with high on-time resolution.</li>
+      <li>Streamlined documentation of testing procedures; reduced errors and improved efficiency.</li>
+      <li>Led vulnerability triage and incident response; shortened phishing triage time and lowered false positives.</li>
+      <li>Enhanced Splunk detections by integrating threat-intel feeds.</li>
+    </ul>
+  </div>
+</section>
+
+  <!-- Detailed Skills -->
+<section class="section" id="skills-detailed">
+  <div class="card" style="display:grid; gap:16px;">
+    <h2>Skills</h2>
+
+    <div style="display:grid; grid-template-columns:repeat(auto-fit,minmax(260px,1fr)); gap:16px;">
+      <div class="card" style="padding:16px;">
+        <h3 style="margin-top:0;">Security & Compliance</h3>
+        <ul style="margin:0; padding-left:18px; color:#5b6876; line-height:1.6;">
+          <li>IT General Controls, SOX, audits, corrective actions</li>
+          <li>Incident response, threat hunting, digital forensics</li>
+          <li>Risk management and documentation</li>
+        </ul>
+      </div>
+
+      <div class="card" style="padding:16px;">
+        <h3 style="margin-top:0;">Tools</h3>
+        <ul style="margin:0; padding-left:18px; color:#5b6876; line-height:1.6;">
+          <li>Tenable, Nessus, Splunk, Wireshark</li>
+          <li>FTK Imager, Autopsy, Autoruns, Nmap, VirusTotal</li>
+        </ul>
+      </div>
+
+      <div class="card" style="padding:16px;">
+        <h3 style="margin-top:0;">Platforms</h3>
+        <ul style="margin:0; padding-left:18px; color:#5b6876; line-height:1.6;">
+          <li>Windows, Linux, Mac, Active Directory, Office 365</li>
+          <li>AWS; basic Azure</li>
+        </ul>
+      </div>
+
+      <div class="card" style="padding:16px;">
+        <h3 style="margin-top:0;">Programming</h3>
+        <ul style="margin:0; padding-left:18px; color:#5b6876; line-height:1.6;">
+          <li>Python, PowerShell, Bash, Java, R</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
+  <!-- Education -->
+<section class="section" id="education">
+  <div class="card">
+    <h2>Education</h2>
+    <ul style="margin:0; padding-left:18px; color:#5b6876; line-height:1.6;">
+      <li><strong>M.S. Cybersecurity Technology</strong>, University of Maryland Global Campus — GPA 4.0, President’s List</li>
+      <li><strong>B.S. Information Technology</strong>, University of Phoenix — Magna Cum Laude</li>
+    </ul>
+  </div>
+</section>
+
   <footer>
     <div class="foot">
       <small>© 2025 Niknaz Sadehvandi • Cybersecurity Portfolio</small>
