--- a/index.html
+++ b/index.html
@@ -74,13 +74,14 @@
         <div>Niknaz Sadehvandi</div>
       </div>
       <nav>
-        <ul>
-          <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="certifications.html">Certifications</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+  <ul>
+    <li><a class="active" href="index.html">Home</a></li>
+    <li><a href="projects.html">Projects</a></li>
+    <li><a href="#certifications">Certifications</a></li>
+    <li><a href="#experience">Experience</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
     </div>
   </header>
 
